examples/test/testpolicy14980.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14980
  namespace: namespace458
spec:
  podSelector:
    matchLabels:
      key26: value44
      key25: value40
      key24: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value24
      podSelector:
        matchLabels:
          key3: value22
